--- a/views/denuncias/visor.jade
+++ b/views/denuncias/visor.jade
@@ -6,6 +6,8 @@ block script
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/locales/bootstrap-datepicker.es.min.js")
 	script(src="/javascripts/plugins/OL3-AnimatedCluster/layer/animatedclusterlayer.js")
 	script(src="/javascripts/plugins/OL3-AnimatedCluster/interaction/selectclusterinteraction.js")
+	script(src='/javascripts/plugins/ol3-ext/style/photostyle.js')
+	
 	script(src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.jquery.js")
 	script(src="http://twitter.github.io/typeahead.js/releases/latest/bloodhound.js")
 	script(src="/javascripts/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.js")
