--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
               p.lead.text-center !{contenido.inicia_sesion_info}
               .space
               .row
-                form(action="/app/usuarios/iniciar" method="POST" style={padding: '5%', background: 'rgba(0,50,187, 0.1)', margin: '0 auto',  width: '80%'}).form-horizontal
+                form(action="/app/usuarios/iniciar" method="POST" style={padding: '5%', background: 'rgba(0,50,187, 0.1)', margin: '0 auto',  width: '80%'}).form-horizontal.container-fluid
                   .col-md-12.text-center
                     i.fa.fa-user(style="font-size: 100px;color: #00bbff")
                   .col-md-6
@@ -24,7 +24,7 @@ block content
                       span.input-group-addon
                         i.fa.fa-key.fa-fw
                       input.form-control.btn-default(type='password', name="password", placeholder='#{contenido.contraseña}')
-                  .col-lg-12(style={float:'none', margin: '0 auto'})
+                  .col-lg-12(style={clear : both, margin: '0 auto'})
                     .input-group(style={'padding-top':'5px'})
                       span.input-group-addon
                         i.fa.fa-sign-in.fa-fw
@@ -109,7 +109,7 @@ block content
               p.lead.text-center !{contenido.recuperar_contraseña_info}
               .space
               .row
-                form#form_olvidaste(action="/app/usuarios/olvidaste" method="POST" style={padding: '5%', background: 'rgba(0,50,187, 0.1)', margin: '0 auto',  width: '80%'}).form-horizontal
+                form#form_olvidaste(action="/app/usuarios/olvidaste" method="POST" style={padding: '5%', background: 'rgba(0,50,187, 0.1)', margin: '0 auto',  width: '80%'}).form-horizontal.container-fluid
                   .col-md-12.text-center
                     i.fa.fa-send(style="font-size: 100px;color: #00bbff")
                   .col-md-12
@@ -117,7 +117,7 @@ block content
                       span.input-group-addon
                         i.fa.fa-envelope-o.fa-fw
                       input#form_olvidaste_email.form-control.btn-default(requires = '', type='text', name="email", placeholder='#{contenido.usuario_o_email}')
-                  .col-lg-12(style={float:'none', margin: '0 auto'})
+                  .col-lg-12(style={clear : both, margin: '0 auto'})
                     .input-group(style={'padding-top':'5px'})
                       span.input-group-addon
                         i.fa.fa-send.fa-fw
