Hasta aquí hemos llegado

--- a/views/denuncias/visor.jade
+++ b/views/denuncias/visor.jade
@@ -31,8 +31,8 @@ block script
 			console.log('denuncia añadida socket.io');
 			
 			var feature = wktFormat.readFeature(denuncia.wkt);
-		    var centro = ol.extent.getCenter(feature.getGeometry().getExtent());
-		    centro[1] += 0.00001;
+		    var centro = denuncia.centro.coordinates;
+		    //centro[1] += 0.00001;
 		    feature_marker = new ol.Feature({
 		    	geometry : new ol.geom.Point(centro),
 		    	name : 'Denuncia Marker'
