--- a/views/base/layout.jade
+++ b/views/base/layout.jade
@@ -3,7 +3,6 @@ html
     title #{contenido.titulo}
     meta(charset='utf-8')
     // Para dispositivos móviles
-    link(rel='icon', href='/images/siteicon.png')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
     // Bootstrap CSS
     link(href='/stylesheets/bootstrap/css/bootstrap.css', rel='stylesheet')
@@ -171,9 +170,12 @@ html
     script(src="https://cdn.socket.io/socket.io-1.3.7.js")
     // FUNCIONALIDADES SOCKET.IO
     script(src="/javascripts/client-sockets.js")
+    script(src="/javascripts/plugins/notify.js/dist/notify.js")
     script.
 
       var traducciones = JSON.parse('!{JSON.stringify(contenido)}');
+
+      var notificaciones = JSON.parse('!{JSON.stringify(mis_notificaciones)}');
 
       $("h1, h2").each(function(){
         var fontSize = $(this).css('font-size');
