--- a/views/base/layout_sin_cabecera.jade
+++ b/views/base/layout_sin_cabecera.jade
@@ -153,6 +153,7 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js')
     // Bootstrap Select JS
     script(src='/javascripts/plugins/bootstrap-select/js/bootstrap-select.js')
+    script(src="/javascripts/plugins/notify.js/dist/notify.js")
     // SOCKET.IO
     script(src="https://cdn.socket.io/socket.io-1.3.7.js")
     // FUNCIONALIDADES SOCKET.IO
@@ -160,6 +161,8 @@ html
     script.
 
       var traducciones = JSON.parse('!{JSON.stringify(contenido)}');
+
+      var notificaciones = JSON.parse('!{JSON.stringify(mis_notificaciones)}');
 
       var sms = {};
       if ('#{message.error}' != '') {
