--- a/views/base/map_layout.jade
+++ b/views/base/map_layout.jade
@@ -193,6 +193,7 @@ html
   // SOCKET.IO
   script(src="https://cdn.socket.io/socket.io-1.3.7.js")
   script(src="/javascripts/plugins/bootstrap-sidebar/dist/js/sidebar.js")
+  script(src="/javascripts/plugins/notify.js/dist/notify.js")
   script.
 
     var traducciones = JSON.parse('!{JSON.stringify(contenido)}');
