--- a/views/usuarios/perfil_visible.jade
+++ b/views/usuarios/perfil_visible.jade
@@ -13,11 +13,41 @@ block content
 		.container
 			.row
 				// Columna Izquierda
-				.col-md-4
+				.col-md-4.container-fluid
 					.row(style="margin:0 5 0 5px;")
-						div(style={background: 'rgba(0,50,187, 0.1)', width: '100%', padding:'40 5 40 5px'}).form-horizontal.text-center
-							img.img-circle.img-responsive.img-thumbnail(src="#{user_otro.profile.picture}" style={'margin': '0 auto', 'width':'200px','height':'200px'})
-							.space
+						div(style={'background-color': 'rgba(0,50,187, 0.1)', 'border-top-left-radius': '10px' , 'border-top-right-radius': '10px', padding: '0px'}).container-fluid
+							div(style={'border-top-left-radius': '10px' , 'border-top-right-radius': '10px', background: 'url(http://www.lovevalencia.com/wp-content/uploads/2011/07/torrent-e1311319357479.jpg)', 'background-size':'100% 60%','background-repeat':'no-repeat', width: '100%', padding:'40 0 40 0px'}).text-center
+								img.img-circle.img-responsive.img-thumbnail(src="#{user_otro.profile.picture}" style={'margin': '0 auto', 
+								'width':'200px','height':'200px'})
+							.col-xs-1
+							.col-xs-10.text-center(style="background-color : rgba(255, 255, 255, 0.5); border-radius : 10px; padding : 5px; margin-bottom : 20px;")
+								.col-xs-4
+									span.fa-stack.fa-lg
+										i.fa.fa-circle.fa-stack-2x(style="color : #00bbff")
+										i.fa.fa-bullhorn.fa-stack-1x.fa-inverse
+								.col-xs-4
+									span.fa-stack.fa-lg
+										i.fa.fa-circle.fa-stack-2x(style="color : #00bbff")
+										i.fa.fa-star.fa-stack-1x.fa-inverse
+								.col-xs-4
+									span.fa-stack.fa-lg
+										i.fa.fa-circle.fa-stack-2x(style="color : #00bbff")
+										i.fa.fa-thumbs-up.fa-stack-1x.fa-inverse
+								.col-xs-4
+									if denuncias
+										| #{denuncias.length}
+									else 
+										| 0
+								.col-xs-4
+									if denuncias_fav
+										| #{denuncias_fav.length}
+									else 
+										| 0
+								.col-xs-4
+									| #{user_otro.likes_en_denuncias}
+							.col-xs-1
+							.col-lg-12.space
+
 				// Columna Central
 				.col-md-8
 					.row(style="margin:0 5 0 5px;")
